--- a/annotation/style.css
+++ b/annotation/style.css
@@ -1,1 +1,15 @@
+body {
+    font-family:'Raleway', sans-serif, Arial;
+    margin-left:20px;
+    margin-right:20px;
+    color:#02176b;
+}
 
+h1 {
+    font-size:24px;
+}
+
+p {
+    font-size:18px;
+    color:000000;
+}
