--- a/annotation/style.css
+++ b/annotation/style.css
@@ -1,15 +1,19 @@
 body {
-    font-family:'Raleway', sans-serif, Arial;
+    font-family:'Slabo 27px', serif, Arial;
+    text-align:center;
     margin-left:20px;
     margin-right:20px;
-    color:#02176b;
+    background-color:#211813;
+    color:#ffffff;
 }
 
 h1 {
-    font-size:24px;
+    font-size:30px;
+    margin-top:40px;
+    margin-bottom:30px;
 }
 
 p {
-    font-size:18px;
-    color:#000000;
+    font-size:24px;
+    margin-top:30px;
 }
